overlays/local/rabbitmq-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-ingress-web
  annotations:
    kubernetes.io/tls-acme: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: rabbitmq-web.local.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: production-ready
                port:
                  name: management
